force-app/main/default/objects/Partner_Agreement_Products__mdt/Partner_Agreement_Products__mdt.object-meta.xml
<CustomObject>
    <label>Partner Agreement Product</label>
    <pluralLabel>Partner Agreement Products</pluralLabel>
</CustomObject>