force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Type of agreements. NOTE THIS NEEDS TO STAY IN SYNC with Partner Agreement picklist Agreement Type! /lightning/setup/ObjectManager/01IF0000002m6dN/FieldsAndRelationships/00NF000000DIUO0/view</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harbor Mugs &amp; Bowls</fullName>
                <default>true</default>
                <label>Harbor Mugs &amp; Bowls</label>
            </value>
            <value>
                <fullName>Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Premier Harbor Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Premier Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Premier Tumblers</fullName>
            </value>
            <value>
                <fullName>Reusable CamLids and Store Racks</fullName>
            </value>
            <value>
                <fullName>Tumblers</fullName>
            </value>
            <value>
                <fullName>Vizient Harbor Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Vizient Mugs &amp; Bowls</fullName>
            </value>
            <value>
                <fullName>Vizient Tumblers</fullName>
            </value>
            <value>
                <fullName>TestData</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>