force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Case_Pack__c.field-meta.xml
<CustomField>
    <fullName>Case_Pack__c</fullName>
    <label>Case Pack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>