force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Product Code</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>