force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Disposable_Lid_Code__c.field-meta.xml
<CustomField>
    <fullName>Disposable_Lid_Code__c</fullName>
    <label>Disposable Lid Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>