force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Fits_Shoreline_Products__c.field-meta.xml
<CustomField>
    <fullName>Fits_Shoreline_Products__c</fullName>
    <label>Fits Shoreline Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>