force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Image_Location__c.field-meta.xml
<CustomField>
    <fullName>Image_Location__c</fullName>
    <description>Images need to be public available. For example, in Documents (classic only)</description>
    <label>Image Location</label>
    <type>Url</type>
</CustomField>