force-app/main/default/objects/Partner_Agreement_Products__mdt/fields/Reusable_Lid_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Reusable_Lid_Capacity__c</fullName>
    <label>Reusable Lid Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>